# Engenharia-de-Dados

./: .gitignore  README.md
data_pipeline_project/: pyproject.toml
data_pipeline_project/etl/: .env.appsheet.example  .env.example  config.py  main.py  s3_session.py  spark.py  spark_session.py
data_pipeline_project/etl/extract/: appsheet.py  s3_extract.py
data_pipeline_project/etl/extract/json_samples/: products.json
data_pipeline_project/etl/loading/: upload_manager.py
data_pipeline_project/etl/transform/: convert.py
